<resources>
    <string name="app_name">ParkNow</string>
    <string name="name">Shivam Shrivastav</string>
    <string name="email">shivam.shrivastav@sjsu.edu</string>
    <string name="img">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome to ParkNow !</string>
    <string name="aboutMsg">This app helps you locate nearest available parking spots.</string>
    <string name="developer">We use crowd-sourced data to provide you an accurate, reliable real-time parking availability information</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="enter_address">Enter Destination Address</string>
    <string name="openList">List view of nearby parking locations</string>
    <string name="nearbyLoc">Nearby Parking Locations</string>
    <string name="nearbyLoc2">(Within 1000 ft)</string>
    <string name="placeTitle">Sample Place</string>
    <string name="time">Time: </string>
    <string name="distance">Distance: </string>
    <string name="eta">ETA: </string>
    <string name="open">Open</string>
    <string name="address">Address: </string>
    <string name="loc_error">Please turn on GPS location</string>
    <string name="save_spot">Save Parking Spot</string>
    <string name="save_spot_saved">Your parking spot is saved</string>
    <string name="parking_spot_removed">Your parking spot is released</string>
    <string name="list">List view</string>
    <string name="save">Save spot</string>
    <string name="remove">Release spot</string>
    <string name="findMyCar">Find my car</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>