<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsFragment">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="1">
                <!--            <ImageView-->
                <!--                android:id="@+id/ic_magnify"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="match_parent"-->
                <!--                android:contentDescription="@string/img"-->
                <!--                android:src="@drawable/ic_baseline_search_24"-->
                <!--                android:layout_weight="0.15"/>-->

                <AutoCompleteTextView
                    android:id="@+id/input_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="0.64"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_baseline_search_24"
                    android:hint="@string/enter_address"
                    android:imeOptions="actionSearch"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ic_locate"
                    android:layout_width="44dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.36"
                    android:clickable="false"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_baseline_my_location_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:elevation="10dp"
            app:cardCornerRadius="8dp">

            <ImageButton
                android:id="@+id/open_list"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/openList"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_format_list_bulleted_24" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>